--- a/src/scss/pages/_login-modal.scss
+++ b/src/scss/pages/_login-modal.scss
@@ -13,6 +13,7 @@
 .login-modal, .signup-modal{
  	display: none;
     a {
+        max-width: max-content;
         text-decoration: underline;
         cursor: pointer;
         color: #4B71E2;
